test/sema/negative/trait_impls5.output
trait_impls5.impala:5 col 1 - 19: error: Duplicated implementation of trait 'T'
